WP-8341 Fixes to the megamenu, search box alignment, font face and size

--- a/sass/partials/design/_search-filters.sass
+++ b/sass/partials/design/_search-filters.sass
@@ -89,9 +89,6 @@
     background: transparent
     border-radius: 0
     border: 0
-    border-bottom: 1px $border-grey solid
-    border-right: 1px $border-grey solid
-    border-top: 1px $border-grey solid
     float: right
     height: 59px
     overflow: hidden
